Changelog
=========

7.1-dev - (unreleased)
----------------------
* Feature: Added i18n translations
  [voineali refs #20431]
* Feature: Added possibility to avoid truncated sentences in description
  [voineali refs #20456]
* Feature: Enabled javascript by default within PDF export.
  [voineali refs #20459]
* Feature: Added API to restrict access to download.pdf
  [voineali refs #20436]

7.0 - (2014-07-15)
------------------
* Feature: Added Table of Contents support
  [voineali refs #20268]
* Cleanup: Remove collective.sendaspdf dependency
  [voineali refs #20268]

6.8 - (2014-06-06)
------------------
* Feature: Added PDF Back Cover support
  [voineali refs #19882]
* Feature: Added PDF Disclaimer support (the first page after cover containing
  author details and copyrights)
  [voineali refs #19882]

6.7 - (2014-03-10)
------------------
* Bug fix: Do not add table of content on PDF cover
  [voineali refs #18630]
* Change: pass a doctype to the header pdf template in order to workaround
  wkhtmltopdf 0.12 issue which fails to insert the header without it
  [ichim-david refs #18550]

6.6 - (2014-01-21)
------------------
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

6.5 - (2013-10-22)
------------------
* Bug fix: return first page on pdf to image conversion; refactor cover
  [simiamih refs #16799]

6.4 - (2013-10-07)
------------------
* Feature: Added utility method to truncate text by the number of characters
  without cutting words at the end
  [voineali refs #16946]
* Feature: Added utility method to convert relative urls to absolute urls
  [voineali refs #16946]

6.3 - (2013-10-04)
------------------
* Bug fix: Fixed PDF cover asking for credentials for non-published documents
  [voineali refs #14904]
* Feature: Added custom PDF html-header and html-footer in order to easily