@@ -1,22 +1,32 @@
-<html>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal">
   <head>
-    <script>
-function subst() {
-  var vars={};
-  var x=document.location.search.substring(1).split('&');
-  for(var i in x) {var z=x[i].split('=',2);vars[z[0]] = unescape(z[1]);}
-  var x=['frompage','topage','page','webpage','section','subsection','subsubsection'];
-  for(var i in x) {
-    var y = document.getElementsByClassName(x[i]);
-    for(var j=0; j<y.length; ++j) y[j].textContent = vars[x[i]];
-  }
-}
-    </script>
+    <style>
+    .pull-left { float: left; }
+    .pull-right { float: right; }
+    .text-left { text-align: left; }
+    .text-left span.page { float: left }
+    .text-left span.section { padding-left: 20pt; }
+    .text-right { text-align: right; }
+    .text-right span.page { float: right }
+    .text-right span.section { padding-right: 20pt; }
+    body { border:0; margin: 0; }
+    div {
+      width: 100%; text-align: right; color: #999; font-size: 9pt; font-family: Verdana;
+      padding-top: 50pt; font-weight: bold;
+    }
+    </style>
   </head>
-  <body style="border:0; margin: 0;" onload="subst()">
-    <div style="width: 100%; text-align: right; color: #999; font-size: 9pt; font-family: Verdana; padding-top: 50pt; font-weight: bold">
-      <span class="section" style="padding-right: 20pt"></span>
-      <span class="page"></span>
+  <body>
+    <div tal:define="
+      page request/page|python:0;
+      page python:int(page);
+      even python:page % 2 == 0;
+      klass python:'text-left' if even else 'text-right';
+    " tal:attributes="class klass">
+      <span class="page" tal:content="page"></span>
+      <span class="section" style="padding-right: 20pt" tal:content="view/body"></span>
     </div>
   </body>
 </html>
